# mgm

mgm_gyak/: GYAKORLATOK_TARTALOM.md  README.md  ROS2_ZH_FELADAT_CHECKLISTA.md  ZH_kezikonyv.md
mgm_gyak/Feladat1/: Feladat1.txt  GYORS_REFERENCIA.md  MEGOLDAS_LEPESROL_LEPESRE.md  README.md
mgm_gyak/Feladat1/proba1/: README.md  package.xml  setup.cfg  setup.py
mgm_gyak/Feladat2/: Feladat2.txt
mgm_gyak/Feladat2/proba2/: README.md  package.xml  setup.cfg  setup.py
mgm_gyak/Feladat2/proba2/launch/: proba2.launch.xml
mgm_gyak/Feladat2/proba2/proba2/: proba2_node.py
mgm_gyak/Feladat2/proba2/rviz/: proba2.rviz
mgm_gyak/Feladat3/: Feladat3.txt
mgm_gyak/ZH/: pachage.txt
mgm_gyak/ZH/zh/: README.md  package.xml  setup.cfg  setup.py
mgm_gyak/ZH/zh/zh/: __init__.py
mgm_gyak/gyak10/: package.xml  setup.cfg  setup.py
mgm_gyak/gyak10/gyak10/: ack_robot.py  pure_pursuit.py
mgm_gyak/gyak10/launch/: gyak10.launch.xml
mgm_gyak/gyak10/rviz/: gyak10.rviz
mgm_gyak/gyak11/: ReadMe.md  package.xml  setup.cfg  setup.py
mgm_gyak/gyak11/gyak11/: pub_path.py  save_path.py
mgm_gyak/gyak11/launch/: gyak11.launch.xml
mgm_gyak/gyak11/param/: positions.txt
mgm_gyak/gyak11/rviz/: gyak11.rviz
mgm_gyak/gyak12/: feladat.txt  package.xml  setup.cfg  setup.py
mgm_gyak/gyak12/gyak12/: node1.py  node2.py
mgm_gyak/gyak12/launch/: gyak12.launch.xml
mgm_gyak/gyak12/rviz/: gyak12.rviz
mgm_gyak/gyak2/gyak2/: publisher.py  (+1 more)
mgm_gyak/gyak7/: package.xml  setup.cfg  setup.py
mgm_gyak/gyak8/: package.xml  setup.cfg  setup.py
mgm_gyak/gyak9/: package.xml  setup.cfg  setup.py
mgm_gyak/templates/: launch_xml_template.launch.xml  params_node_template.py  publisher_template.py  subscriber_template.py
(+18 files in other folders)
