<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zh</name>
  <version>0.0.0</version>
  <description>ZH feladatokhoz létrehozott minimális ROS 2 ament_python csomag.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>TODO: License declaration</license>

  <!-- Függőségek a parancsban megadva -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Ha szükséges quaternion → euler: tf_transformations Python csomag -->
  <exec_depend>tf_transformations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
